--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,13 @@
 // Add active item on header [from, to, subject, (date)]
 // Add on hover style
 
+// @import "test";
+
 // Colors
 :root {
 	--lighter-color: #ffffff;
 	--light-color: #f6f5f4;
-	--gray-color: #888580;
+	--gray-color: #c4c4c4;
 	--dark-color: #666460;
   --darker-color: #343535;
   --hover-color: #0037d9;
@@ -163,15 +165,14 @@ body {
       // History viewer container
       &-viewer {
         grid-row: 2/3;
-        background: rgba(0, 0, 0, 0.25);
+        background-color: var(--gray-color);
         display: flex;
         flex-direction: column;
         .inbox-item-expanded {
           position: relative;
           display: grid;
-          grid-template-columns: 9fr 9fr 3fr;
+          grid-template-columns: 9fr 9fr 2fr;
           grid-template-rows: 1fr 1fr auto;
-          height: max-content;
           margin-bottom: 1rem;
           border: 1px solid black;
           &-sender,
@@ -187,10 +188,10 @@ body {
               padding: .5rem 1rem;
             }
             h4 {
-              background: var(--dark-color);
+              background: var(--darker-color);
             }
             h5 {
-              background: var(--gray-color);
+              background: var(--dark-color);
             }
           }
           &-sender {
@@ -198,15 +199,19 @@ body {
             grid-row: 1/2;
           }
           &-recipient {
-            grid-column: 2/3;
+            grid-column: 2/4;
             grid-row: 1/2;
+            border-left: 1px solid var(--border-color);
+
           }
           &-date {
             grid-column: 3/4;
-            grid-row: 1/2;
+            grid-row: 2/3;
+            border-left: 1px solid var(--border-color);
+
           }
           &-subject {
-            grid-column: 1/4;
+            grid-column: 1/3;
             grid-row: 2/3;
           }
           &-body {
